[build-system]
requires = ["setuptools>=78.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "argparse-color-formatter"
description = """\
    A `formatter_class` for `argparse` that deals with ANSI colour escapes. \
    Specifically, this formatter does not count escape characters as displayed \
    characters when wrapping `argparse`'s help text into the terminal.\
    """
readme = "README.md"
requires-python = ">=3.5"
license-files = ["LICENSE"]
authors = [
    { name = "Arrai Innovations", email = "support@arrai.com" }
]
classifiers = [
    "Development Status :: 6 - Mature",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: BSD License",
    "Environment :: Console",
    "Intended Audience :: Developers",
]
dynamic = ["dependencies", "version"]

[project.urls]
repository = "https://github.com/arrai-innovations/argparse-color-formatter/"

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }
version = { attr = "argparse_color_formatter.__version__" }

[tool.flake8]
exclude = ".git,*venv*"
max-complexity = 10
max-line-length = 120
extend-ignore = [
    # (flake8) Black incompatibility - see https://github.com/PyCQA/pycodestyle/issues/373
    "E203",
]

[tool.black]
line-length = 120

[tool.coverage.run]
branch = true
include = [
    "argparse_color_formatter.py",
    "tests.py",
]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == '__main__'",
    "raise NotImplementedError",
    "except ImportError",
]
